# dnd-tracker

./: Cargo.toml  jsconfig.json  package-lock.json  package.json
main/: background.js  background.ts
main/helpers/: create-window.js
renderer/: jsconfig.json  tailwind.config.js
renderer/_classes/: abilities.jsx  character.jsx  class.jsx  item.jsx  monster.jsx  race.jsx  stats.jsx
renderer/_components/_buttons/: dice_roll_button.jsx  hp_button.jsx  passive_button.jsx  stat_button.jsx
renderer/_components/lists/: ability_list.jsx  item_list.jsx
renderer/_components/modals/: item_edit.jsx  raw_field_edit.jsx  stat_edit.jsx
renderer/_contexts/: DiceRollCtx.jsx  ItemModalCtx.jsx  RawFieldCtx.jsx  StatModalCtx.jsx  characterCtx.jsx  characterListCtx.jsx  classesCtx.jsx  monsterListCtx.jsx  playerCtx.jsx  racesCtx.jsx
renderer/classes/: abilities.jsx  character.jsx  item.jsx  stats.jsx
renderer/pages/: _app.jsx  characters.jsx  characters.tsx  home.tsx  monsters.tsx  music.tsx  options.tsx  start.jsx  start.tsx
src/tui/: app.rs  errors.rs  mod.rs  term.rs  theme.rs
src/tui/tabs/: mod.rs  monster_maker.rs
