[package]
name = "dnd-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# System Deps
winapi = "*"
winconsole = {version = "0.11", features = ["window"]}

arrayref= "*"
chrono = "*"
rust_decimal = { version = "1.31.0", features = ["maths"]}

# CRYPTO UTILS
rand ="*"

# DISPLAY
color-eyre = "0.6.2"
itertools = "0.12"
ratatui = "0.26.1"
font8x8 = "0.3.1"
palette = "0.7.3"
crossterm = { version = "0.27"}
strum = { version = "0.26", features = ["derive"] }
unicode-width = "0.1"
derive_builder = "0.20.0"
tui-textarea = "0.4.0"


[toolchain]
channel = "nightly"

[build]
target-dir = "./env"

[build-dependencies]
tonic-build = "0.8.4"
winres = "0.1"
static_vcruntime = "2.0"